--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -15,9 +15,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow:
-    0 4px 8px 0 rgba(0, 0, 0, 0.2),
-    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding: 35px;
 }
 .dark-login-form-container {
@@ -36,9 +34,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow:
-    0 4px 8px 0 rgba(0, 0, 0, 0.2),
-    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding: 35px;
 }
 
